# savanna

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  setup.cfg
configs/parameters/: default.yml  plasmo-default.yml
environments/: dev.yml  docker.yml  run.yml
example_data/ag_set1/: README.txt
example_data/ag_set1/metadata/: nomadsSID.amplicons.bed  sample_info.csv
example_data/amplicons/: nomads16.amplicons.bed
example_data/expt1/: README.md
example_data/expt1/metadata/: sample_info.csv
example_data/expt2/: README.md
example_data/expt2/metadata/: 2024_06_19_rapid_paper_mvp_opt-cleaned-jh.csv  sample_info.csv
example_data/expt3/: README.md
example_data/expt3/metadata/: nomadsIR.amplicons.bed  sample_info.csv
example_data/pf_set1/: README.txt  sample_info.csv
example_data/pf_set1/metadata/: sample_info-n8.csv
example_data/pf_set2/metadata/: sample_info-mvp.csv
scripts/: run_example.sh  run_expt2.sh  run_expt3.sh
slurm/: gen_slurm-submission-analyse.py  gen_slurm-submission-pipeline.py
slurm/runs/slurm1-r0/: savanna-analyse.slurm  savanna-basecall.slurm  savanna-submit.sh  savanna-summary.slurm
slurm/runs/slurm1-r1/: savanna-analyse.slurm  savanna-submit.sh  savanna-summary.slurm
slurm/runs/slurm1-r2/: savanna-analyse.slurm  savanna-submit.sh  savanna-summary.slurm
slurm/runs/slurm1-r3/: savanna-analyse.slurm  savanna-basecall.slurm  savanna-submit.sh  savanna-summary.slurm
slurm/templates/: analyse.slurm  basecall.slurm  savanna-submit.sh  submit-analyse.sh  submit.sh  summary.slurm
src/savanna/: cli.py
(+76 files in other folders)
